--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,13 +5,11 @@
   font-size: 24pt;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border-radius: 10px;
-  overflow: hidden;
   width: calc(100% - 50px);
   height: 75px;
   margin: auto;
 
 }
-
 
 nav .navbar-brand {
     color: white;
